--- a/harvestsaver/payment/templates/payment/landing.html
+++ b/harvestsaver/payment/templates/payment/landing.html
@@ -181,8 +181,8 @@ button:disabled {
           alt="{%if product.alt%}{{product.alt}}{%else%}image of the {{product.name}}{%endif%}"
         />
         <div class="description">
-          <h3>{{ product.name }}</h3>
-          <h5>$ {{ product.price }}</h5>
+          <h3>{{ product.product.name }}</h3>
+          <h5>$ {{ product.total_amount }}</h5>
         </div>
       </div>
 
@@ -190,6 +190,7 @@ button:disabled {
 
       <hr />
       <h2>Checkout using custom payment flow</h2>
+      {%comment%}
       <form id="payment-form">
         <input type="text" id="email" placeholder="Email address" />
         <div id="card-element"><!--Stripe.js injects the Card Element--></div>
@@ -204,12 +205,48 @@ button:disabled {
           <a href="{% url 'farm:home' %}" target="_blank">Home page.</a>
         </p>
       </form>
+      {%endcomment%}
+      <form action="{% url 'payment:checkout_payment' product.pk %}" method="post">
+        {% csrf_token%}
+        <button type="submit" id="farm-pay">Farmpay</button>
+      </form>
 
     </section>
     {% csrf_token %}
   </body>
   
   <script type="text/javascript">
+
+    var farmcheckoutButton = document.getElementById("farm-pay");
+    farmcheckoutButton.addEventListener("click", function () {
+    
+      fetch("{% url 'payment:checkout_payment' product.pk %}", {
+        method: "POST",
+        headers: {
+            'X-CSRFToken': csrftoken
+        }
+      })
+        .then(function (response) {
+          return response.json();
+        })
+        .then(function (session) {
+          console.log("Redirecting to success page");
+          return stripe.redirectToCheckout({ sessionId: session.id });
+        })
+        .then(function (result) {
+          // If redirectToCheckout fails due to a browser or network
+          // error, you should display the localized error message to your
+          // customer using error.message.
+          if (result.error) {
+            alert(result.error.message);
+          }
+        })
+        .catch(function (error) {
+          console.error("Error:", error);
+        });
+    });
+
+
     const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
     // Create an instance of the Stripe object with your publishable API key
     var stripe = Stripe("{{ STRIPE_PUBLIC_KEY }}");
