--- a/harvestsaver/farm/templates/farm/equipment_detail.html
+++ b/harvestsaver/farm/templates/farm/equipment_detail.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block category %}
-<div class="container bg-white">
+<div class="container bg-white mt-4">
     <div class="row py-2">
         <div class="col-md-5">
             <img src="{{equipment.image.url}}" class="img-fluid"
