--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -142,7 +142,7 @@
         </div>
 
         <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
-          <img src="assets/img/hero-img.svg" class="img-fluid mb-3 mb-lg-0" alt="">
+          <img src="{% static 'assets/img/hero-img.svg' %}" class="img-fluid mb-3 mb-lg-0" alt="hero image">
         </div>
 
       </div>
@@ -381,6 +381,7 @@
 
   <!-- Template Main JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
+  
 
 </body>
 
