--- a/harvestsaver/accounts/templates/accounts/layout.html
+++ b/harvestsaver/accounts/templates/accounts/layout.html
@@ -70,7 +70,7 @@
           <li><a href="{% url 'accounts:register' %}">Signin</a></li>
           {% endif %}
           <li><a href="{% url 'accounts:contact' %}">Contact</a></li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+          <li><a class="get-a-quote" href="{% url 'transit:transportquote' %}">Get a Quote</a></li>
           <a href="{% url 'farm:cart_items' %}">
             <li class="position-relative">
                 {%if current_user_total_quantity%}
